--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@
 					<div class="mistake__inner">
 						<div class="mistake__left">
 							<div class="mistake__img">
-								<img src="img/mistake-img.webp" alt="">
+								<img loading="lazy" src="img/mistake-img.webp" alt="">
 							</div>
 							<h2>Ой, что-то пошло не так :(</h2>
 							<p>Сжалеем, но такой страницы не существует</p>
@@ -93,7 +93,7 @@
 						</div>
 						<div class="mistake__right">
 							<div class="mistake__img2">
-								<img src="img/mistake-img2.webp" alt="">
+								<img loading="lazy" src="img/mistake-img2.webp" alt="">
 							</div>
 						</div>
 					</div>
