--- a/gratitude.html
+++ b/gratitude.html
@@ -90,7 +90,7 @@
 						</div>
 						<div class="gratitude__right">
 							<div class="gratitude__img">
-								<img src="img/gratitude-img.webp" alt="">
+								<img loading="lazy" src="img/gratitude-img.webp" alt="">
 							</div>
 						</div>
 					</div>
