--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<section class="main-section">
                 <div class="container-fluid">
 					<div class="main-section__inner">
-						<div class="main-section__wrap">
+						<div class="main-section__wrap left-anim _anim-items anim-no-hide">
 							<h1>Научим уверенно говорить на английском и арабском языках детей 4-15 лет онлайн</h1>
 							<div class="main-section__subtitle">
 								<p>Наполняем детский мир знанием и смыслом</p>
@@ -96,7 +96,7 @@
 								<span>первое занятие бесплатно</span>
 							</button>
 						</div>
-						<div class="main-section__items">
+						<div class="main-section__items left-anim _anim-items anim-no-hide">
 							<div class="main-section__img">
 								<img loading="lazy" src="img/main-img.webp" alt="">
 							</div>
@@ -175,7 +175,7 @@
 								<div class="info__slider-wrap">
 									<div class="info-slide">
 										<div class="info-slide__desc">
-											<div class="info-slide__group">
+											<div class="info-slide__group left-anim _anim-items anim-no-hide">
 												<ul>
 													<li>
 														<i>
@@ -437,7 +437,7 @@
 					<div class="services__inner">
 						<h2>Позаботимся о комфортном будущем  <br> Вашего ребенка уже сегодня</h2>
 						<p>Знание языков открывает вашему ребёнку  <br> путь к любой професси в любой стране</p>
-						<div class="services__cards">
+						<div class="services__cards left-anim _anim-items anim-no-hide">
 							<div class="service-card">
 								<div class="service-card__img">
 									<img loading="lazy" src="img/service-card__img.webp" alt="">
@@ -480,7 +480,7 @@
 					<div class="info2__inner">
 						<h2>Мы одни из немногих, кто <br>  не просто обучает языкам</h2>
 						<div class="info2__cards">
-							<div class="info2-card border-card">
+							<div class="info2-card border-card left-anim _anim-items anim-no-hide">
 								<div class="info2-card__title">Раскрываем суть важных вопросов:</div>
 								<ul>
 									<li>Как превратить обучение в хобби?</li>
@@ -492,7 +492,7 @@
 									<img loading="lazy" src="img/info2-card__img.webp" alt="">
 								</div>
 							</div>
-							<div class="info2-card info2-card2">
+							<div class="info2-card info2-card2 right-anim _anim-items anim-no-hide">
 								<div class="info2-card__wrap">
 									<div class="info2-card__subtitle">А вы знали, что <strong>92% детей</strong> лучше усваивают материал при доверительном отношении к преподавателю?</div>
 									<div class="info2-card__text">Наш метод «любить и дружить» позволяет раскрыть ребенка как личность и помогает ему реализоваться в дальнейшем.</div>
@@ -513,7 +513,7 @@
 					<div class="services__inner">
 						<h2>Формы занятий и расценки</h2>
 						<div class="services__cards services2__cards">
-							<div class="service-card">
+							<div class="service-card left-anim _anim-items anim-no-hide">
 								<div class="service-card__img">
 									<img loading="lazy" src="img/service-card__img4.webp" alt="">
 									<img loading="lazy" src="img/service-card__img4-1.webp" alt="">
@@ -554,7 +554,7 @@
 									</ul>
 								</div>
 							</div>
-							<div class="service-card">
+							<div class="service-card right-anim _anim-items anim-no-hide">
 								<div class="service-card__img">
 									<img loading="lazy" src="img/service-card__img5.webp" alt="">
 									<img loading="lazy" src="img/service-card__img5-1.webp" alt="">
@@ -619,7 +619,7 @@
 					<div class="prices__inner">
 						<h2>Экономьте на абонементе, а не на знаниях</h2>
 						<div class="prices__cards">
-							<div class="price-card">
+							<div class="price-card left-anim _anim-items anim-no-hide">
 								<div class="price-card__wrap">
 									<div class="price-card__top">
 										<div class="price-card__age">
@@ -707,7 +707,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="price-card">
+							<div class="price-card right-anim _anim-items anim-no-hide">
 								<div class="price-card__wrap">
 									<div class="price-card__top">
 										<div class="price-card__age">
@@ -804,7 +804,7 @@
 			</section>
 			<section class="discount">
 				<div class="container-fluid">
-					<div class="discount__inner">
+					<div class="discount__inner left-anim _anim-items anim-no-hide">
 						<div class="discount__desc">
 							<div class="discount__title">Дарим
 								<span class="text_color">25% скидки</span>
@@ -829,7 +829,7 @@
 					<div class="info3__inner">
 						<h2>Следуем призванию: делать мир лучше</h2>
 						<div class="info3__cards">
-							<div class="info3__cards-left">
+							<div class="info3__cards-left left-anim _anim-items anim-no-hide">
 								<div class="info3-card">
 									<div class="arrow">
 										<img src="img/arrow2.svg" alt="">
@@ -862,7 +862,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="info3__cards-right">
+							<div class="info3__cards-right right-anim _anim-items anim-no-hide">
 								<div class="info3-card">
 									<div class="arrow">
 										<img src="img/arrow3.svg" alt="">
@@ -905,7 +905,7 @@
 				<div class="container-fluid">
 					<div class="feedbacks__inner">
 						<h2>Отзывы наших учеников и их родителей</h2>
-						<div class="feedbacks__slider">
+						<div class="feedbacks__slider left-anim _anim-items anim-no-hide">
 							<div class="feedbacks__slider-wrap">
 								<div class="feedback-card">
 									<div class="feedback-card__top">
@@ -1055,7 +1055,7 @@
             <section class="connection">
                 <div class="container-fluid">
                     <div class="connection__inner">
-                        <div class="connection__left">
+                        <div class="connection__left left-anim _anim-items anim-no-hide">
                             <div class="connection__desc">
                                 <h2>Вернём деньги в течение 45 дней за неиспользованные уроки</h2>
                                 <p>например, если у Вас изменились планы</p>
@@ -1069,7 +1069,7 @@
 								</div>
                             </div>
                         </div>
-                        <div class="connection__right">
+                        <div class="connection__right right-anim _anim-items anim-no-hide">
 							<div class="form">
 								<div class="form-head">
 									<div class="form-title">Запишитесь на обучение</div>
@@ -1104,7 +1104,7 @@
 							</div>
                         </div>
 <!--						<div class="connection__img2">-->
-<!--							<img src="img/connection-img2.webp" alt="">-->
+<!--							<img loading="lazy" src="img/connection-img2.webp" alt="">-->
 <!--						</div>-->
                     </div>
                 </div>
