--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 														<path d="M29.293 9L14.293 0.339746V17.6603L29.293 9ZM0.792969 10.5H15.793V7.5H0.792969V10.5Z" fill="white"/>
 													</svg>
 												</div>
-												<img loading="lazy" class="info-slide__img info-slide__img1-1" src="img/info-slide__img2.webp" alt="">
+												<img loading="lazy" class="info-slide__img" src="img/info-slide__img2.webp" alt="">
 											</div>
 										</div>
 									</div>
@@ -369,7 +369,7 @@
 														<path d="M29.293 9L14.293 0.339746V17.6603L29.293 9ZM0.792969 10.5H15.793V7.5H0.792969V10.5Z" fill="white"/>
 													</svg>
 												</div>
-												<img loading="lazy" class="info-slide__img info-slide__img1" src="img/info-slide__img4.webp" alt="">
+												<img loading="lazy" class="info-slide__img" src="img/info-slide__img4.webp" alt="">
 											</div>
 										</div>
 									</div>
@@ -428,7 +428,9 @@
 						</div>
 					</div>
 					<img loading="lazy" class="info__img" src="img/info-img.webp" alt="">
-					<img loading="lazy" class="info__img2" src="img/info-img2.webp" alt="">
+					<div class="info__img2">
+						<img loading="lazy" src="img/info-img2.webp" alt="">
+					</div>
 					<img loading="lazy" class="info__img3" src="img/info-img3.webp" alt="">
 				</section>
 			</div>
@@ -481,21 +483,25 @@
 						<h2>Мы одни из немногих, кто <br>  не просто обучает языкам</h2>
 						<div class="info2__cards">
 							<div class="info2-card border-card left-anim _anim-items anim-no-hide">
-								<div class="info2-card__title">Раскрываем суть важных вопросов:</div>
-								<ul>
-									<li>Как превратить обучение в хобби?</li>
-									<li>Чем знание языков помогает в жизни?</li>
-									<li>Как перестать стесняться переспрашивать?</li>
-									<li>За счёт чего можно наладить общение и завести друзей?</li>
-								</ul>
-								<div class="info2-card__img">
-									<img loading="lazy" src="img/info2-card__img.webp" alt="">
+								<div class="info2-card__shadow">
+									<div class="info2-card__title">Раскрываем суть важных вопросов:</div>
+									<ul>
+										<li>Как превратить обучение в хобби?</li>
+										<li>Чем знание языков помогает в жизни?</li>
+										<li>Как перестать стесняться переспрашивать?</li>
+										<li>За счёт чего можно наладить общение и завести друзей?</li>
+									</ul>
+									<div class="info2-card__img">
+										<img loading="lazy" src="img/info2-card__img.webp" alt="">
+									</div>
 								</div>
 							</div>
 							<div class="info2-card info2-card2 right-anim _anim-items anim-no-hide">
-								<div class="info2-card__wrap">
-									<div class="info2-card__subtitle">А вы знали, что <strong>92% детей</strong> лучше усваивают материал при доверительном отношении к преподавателю?</div>
-									<div class="info2-card__text">Наш метод «любить и дружить» позволяет раскрыть ребенка как личность и помогает ему реализоваться в дальнейшем.</div>
+								<div class="info2-card__shadow">
+									<div class="info2-card__wrap">
+										<div class="info2-card__subtitle">А вы знали, что <strong>92% детей</strong> лучше усваивают материал при доверительном отношении к преподавателю?</div>
+										<div class="info2-card__text">Наш метод «любить и дружить» позволяет раскрыть ребенка как личность и помогает ему реализоваться в дальнейшем.</div>
+									</div>
 								</div>
 								<button class="info2-card__btn btn btn-pink">
 									<span>первое занятие бесплатно</span>
@@ -523,31 +529,31 @@
 									<ul>
 										<li>
 											<i>
-												<img src="img/check.svg" alt="">
+												<img src="img/check2.svg" alt="">
 											</i>
 											Персональные уроки с репетитором-носителем языка
 										</li>
 										<li>
 											<i>
-												<img src="img/check.svg" alt="">
+												<img src="img/check2.svg" alt="">
 											</i>
 											Длительность: 30 или 45 минут
 										</li>
 										<li>
 											<i>
-												<img src="img/check.svg" alt="">
+												<img src="img/check2.svg" alt="">
 											</i>
 											4 / 8 / 16 занятий 
 										</li>
 										<li>
 											<i>
-												<img src="img/check.svg" alt="">
+												<img src="img/check2.svg" alt="">
 											</i>
 											Увлекательные домашние задания
 										</li>
 										<li>
 											<i>
-												<img src="img/check.svg" alt="">
+												<img src="img/check2.svg" alt="">
 											</i>
 											Корректировка программы на основе взаимооценки
 										</li>
@@ -564,31 +570,31 @@
 									<ul>
 										<li>
 											<i>
-												<img src="img/check2.svg" alt="">
+												<img src="img/check.svg" alt="">
 											</i>
 											Группа 3-5 человек
 										</li>
 										<li>
 											<i>
-												<img src="img/check2.svg" alt="">
+												<img src="img/check.svg" alt="">
 											</i>
 											Длительность: 45 или 60 минут
 										</li>
 										<li>
 											<i>
-												<img src="img/check2.svg" alt="">
+												<img src="img/check.svg" alt="">
 											</i>
 											4 / 8 / 16 занятий 
 										</li>
 										<li>
 											<i>
-												<img src="img/check2.svg" alt="">
+												<img src="img/check.svg" alt="">
 											</i>
 											Парные и групповые интерактивы
 										</li>
 										<li>
 											<i>
-												<img src="img/check2.svg" alt="">
+												<img src="img/check.svg" alt="">
 											</i>
 											Корректировка программы на основе взаимооценки
 										</li>
@@ -673,29 +679,7 @@
 										<span>попробовать бесплатно</span>
 									</button>
 								</div>
-								<div data-content-path="1" class="price-card__tabs checkbox-content checkbox-content--active">
-									<div data-tab-path="1" class="price-card__tab price-card__tab--active">
-										<span>4 урока</span>
-									</div>
-									<div data-tab-path="2" class="price-card__tab">
-										<span>8 урока</span>
-									</div>
-									<div data-tab-path="3" class="price-card__tab">
-										<span>16 урока</span>
-									</div>
-								</div>
-								<div data-content-path="2" class="price-card__tabs checkbox-content">
-									<div data-tab-path="1" class="price-card__tab price-card__tab--active">
-										<span>4 урока</span>
-									</div>
-									<div data-tab-path="2" class="price-card__tab">
-										<span>8 урока</span>
-									</div>
-									<div data-tab-path="3" class="price-card__tab">
-										<span>16 урока</span>
-									</div>
-								</div>
-								<div data-content-path="3" class="price-card__tabs checkbox-content">
+								<div data-content-path="3" class="price-card__tabs">
 									<div data-tab-path="1" class="price-card__tab price-card__tab--active">
 										<span>4 урока</span>
 									</div>
@@ -761,29 +745,7 @@
 										<span>попробовать бесплатно</span>
 									</button>
 								</div>
-								<div data-content-path="1" class="price-card__tabs checkbox-content checkbox-content--active">
-									<div data-tab-path="1" class="price-card__tab price-card__tab--active">
-										<span>4 урока</span>
-									</div>
-									<div data-tab-path="2" class="price-card__tab">
-										<span>8 урока</span>
-									</div>
-									<div data-tab-path="3" class="price-card__tab">
-										<span>16 урока</span>
-									</div>
-								</div>
-								<div data-content-path="2" class="price-card__tabs checkbox-content">
-									<div data-tab-path="1" class="price-card__tab price-card__tab--active">
-										<span>4 урока</span>
-									</div>
-									<div data-tab-path="2" class="price-card__tab">
-										<span>8 урока</span>
-									</div>
-									<div data-tab-path="3" class="price-card__tab">
-										<span>16 урока</span>
-									</div>
-								</div>
-								<div data-content-path="3" class="price-card__tabs checkbox-content">
+								<div class="price-card__tabs">
 									<div data-tab-path="1" class="price-card__tab price-card__tab--active">
 										<span>4 урока</span>
 									</div>
@@ -834,7 +796,10 @@
 									<div class="arrow">
 										<img src="img/arrow2.svg" alt="">
 									</div>
-									<div class="info3-card__wrap" style="clip-path: polygon( 94.456% 50%,94.456% 50%,94.528% 50.894%,94.738% 51.742%,95.075% 52.532%,95.526% 53.254%,96.08% 53.896%,96.726% 54.447%,97.452% 54.895%,98.248% 55.229%,99.101% 55.438%,100% 55.51%,100% 96.939%,100% 96.939%,99.96% 97.435%,99.843% 97.906%,99.656% 98.346%,99.406% 98.747%,99.098% 99.103%,98.739% 99.409%,98.335% 99.658%,97.893% 99.844%,97.42% 99.96%,96.92% 100%,3.08% 100%,3.08% 100%,2.58% 99.96%,2.107% 99.844%,1.665% 99.658%,1.261% 99.409%,0.902% 99.103%,0.594% 98.747%,0.344% 98.346%,0.157% 97.906%,0.04% 97.435%,0% 96.939%,0% 3.061%,0% 3.061%,0.04% 2.565%,0.157% 2.094%,0.344% 1.654%,0.594% 1.253%,0.902% 0.897%,1.261% 0.591%,1.665% 0.342%,2.107% 0.156%,2.58% 0.04%,3.08% 0%,96.92% 0%,96.92% 0%,97.42% 0.04%,97.893% 0.156%,98.335% 0.342%,98.739% 0.591%,99.098% 0.897%,99.406% 1.253%,99.656% 1.654%,99.843% 2.094%,99.96% 2.565%,100% 3.061%,100% 44.49%,100% 44.49%,99.101% 44.562%,98.248% 44.771%,97.452% 45.105%,96.726% 45.553%,96.08% 46.104%,95.526% 46.746%,95.075% 47.468%,94.738% 48.258%,94.528% 49.106%,94.456% 50% );">
+									<div class="border">
+										<span></span>
+									</div>
+									<div class="info3-card__wrap">
 										<div class="info3-card__img">
 											<img loading="lazy" src="img/info3-card__img.webp" alt="">
 										</div>
@@ -847,7 +812,10 @@
 									</div>
 								</div>
 								<div class="info3-card">
-									<div class="info3-card__wrap" style="clip-path: polygon( 94.456% 50%,94.456% 50%,94.528% 50.894%,94.738% 51.742%,95.075% 52.532%,95.526% 53.254%,96.08% 53.896%,96.726% 54.447%,97.452% 54.895%,98.248% 55.229%,99.101% 55.438%,100% 55.51%,100% 96.939%,100% 96.939%,99.96% 97.435%,99.843% 97.906%,99.656% 98.346%,99.406% 98.747%,99.098% 99.103%,98.739% 99.409%,98.335% 99.658%,97.893% 99.844%,97.42% 99.96%,96.92% 100%,3.08% 100%,3.08% 100%,2.58% 99.96%,2.107% 99.844%,1.665% 99.658%,1.261% 99.409%,0.902% 99.103%,0.594% 98.747%,0.344% 98.346%,0.157% 97.906%,0.04% 97.435%,0% 96.939%,0% 3.061%,0% 3.061%,0.04% 2.565%,0.157% 2.094%,0.344% 1.654%,0.594% 1.253%,0.902% 0.897%,1.261% 0.591%,1.665% 0.342%,2.107% 0.156%,2.58% 0.04%,3.08% 0%,96.92% 0%,96.92% 0%,97.42% 0.04%,97.893% 0.156%,98.335% 0.342%,98.739% 0.591%,99.098% 0.897%,99.406% 1.253%,99.656% 1.654%,99.843% 2.094%,99.96% 2.565%,100% 3.061%,100% 44.49%,100% 44.49%,99.101% 44.562%,98.248% 44.771%,97.452% 45.105%,96.726% 45.553%,96.08% 46.104%,95.526% 46.746%,95.075% 47.468%,94.738% 48.258%,94.528% 49.106%,94.456% 50% );">
+									<div class="border">
+										<span></span>
+									</div>
+									<div class="info3-card__wrap">
 										<div class="info3-card__img">
 											<img loading="lazy" src="img/info3-card__img3.webp" alt="">
 										</div>
@@ -867,7 +835,10 @@
 									<div class="arrow">
 										<img src="img/arrow3.svg" alt="">
 									</div>
-									<div class="info3-card__wrap" style="clip-path: polygon( 5.544% 50%,5.544% 50%,5.472% 49.106%,5.262% 48.258%,4.925% 47.468%,4.474% 46.746%,3.92% 46.104%,3.274% 45.553%,2.548% 45.105%,1.752% 44.771%,0.899% 44.562%,0% 44.49%,0% 3.061%,0% 3.061%,0.04% 2.565%,0.157% 2.094%,0.344% 1.654%,0.594% 1.253%,0.902% 0.897%,1.261% 0.591%,1.665% 0.342%,2.107% 0.156%,2.58% 0.04%,3.08% 0%,96.92% 0%,96.92% 0%,97.42% 0.04%,97.893% 0.156%,98.335% 0.342%,98.739% 0.591%,99.098% 0.897%,99.406% 1.253%,99.656% 1.654%,99.843% 2.094%,99.96% 2.565%,100% 3.061%,100% 96.939%,100% 96.939%,99.96% 97.435%,99.843% 97.906%,99.656% 98.346%,99.406% 98.747%,99.098% 99.103%,98.739% 99.409%,98.335% 99.658%,97.893% 99.844%,97.42% 99.96%,96.92% 100%,3.08% 100%,3.08% 100%,2.58% 99.96%,2.107% 99.844%,1.665% 99.658%,1.261% 99.409%,0.902% 99.103%,0.594% 98.747%,0.344% 98.346%,0.157% 97.906%,0.04% 97.435%,0% 96.939%,0% 55.51%,0% 55.51%,0.899% 55.438%,1.752% 55.229%,2.548% 54.895%,3.274% 54.447%,3.92% 53.896%,4.474% 53.254%,4.925% 52.532%,5.262% 51.742%,5.472% 50.894%,5.544% 50% );">
+									<div class="border">
+										<span></span>
+									</div>
+									<div class="info3-card__wrap">
 										<div class="info3-card__img">
 											<img loading="lazy" src="img/info3-card__img2.webp" alt="">
 										</div>
@@ -1103,9 +1074,9 @@
 								</form>
 							</div>
                         </div>
-<!--						<div class="connection__img2">-->
-<!--							<img loading="lazy" src="img/connection-img2.webp" alt="">-->
-<!--						</div>-->
+						<div class="connection__img2">
+							<img loading="lazy" src="img/connection-img2.webp" alt="">
+						</div>
                     </div>
                 </div>
 				<div class="connection__img3">
