--- a/index.html
+++ b/index.html
@@ -892,10 +892,13 @@
 									</div>
 									<div class="feedback-card__title">Меня зовут Елена, сын Иван 8 лет. Мы занимаемся уже год.</div>
 									<div class="feedback-card__text">
-										<p>Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме. За этот период значительно увеличился словарный запас у ребёнка, может составлять предложения, отвечать на вопросы...</p>
+										<p>Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме. За этот период значительно увеличился словарный запас у ребёнка, может составлять предложения, отвечать на вопросы. Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме.</p>
 									</div>
 									<div class="feedback-card__bottom">
-										<a href="" class="feedback-card__link">читать полностью</a>
+										<div class="feedback-card__btn">
+											<span>читать полностью</span>
+											<span>Скрыть</span>
+										</div>
 									</div>
 								</div>
 								<div class="feedback-card">
@@ -912,10 +915,13 @@
 									</div>
 									<div class="feedback-card__title">Всем здравствуйте!</div>
 									<div class="feedback-card__text">
-										<p>Хотела бы поделиться нашим опытом занятий с Зейном. У моей дочки был такой период, когда мы приостановили интенсивные занятия английским языком и оставили только книжки и мультики. И через какой-то период времени она начала отказываться  общаться со мной на...</p>
+										<p>Хотела бы поделиться нашим опытом занятий с Зейном. У моей дочки был такой период, когда мы приостановили интенсивные занятия английским языком и оставили только книжки и мультики. И через какой-то период времени она начала отказываться общаться со мной на Хотела бы поделиться нашим опытом занятий с Зейном. У моей дочки был такой период, когда мы приостановили интенсивные занятия английским языком и оставили только книжки и мультики.</p>
 									</div>
 									<div class="feedback-card__bottom">
-										<a href="" class="feedback-card__link">читать полностью</a>
+										<div class="feedback-card__btn">
+											<span>читать полностью</span>
+											<span>Скрыть</span>
+										</div>
 										<a class="feedback-card__link2" href="">видеоотзыв</a>
 									</div>
 								</div>
@@ -933,10 +939,13 @@
 									</div>
 									<div class="feedback-card__title">Меня зовут Елена, сын Иван 8 лет. Мы занимаемся уже год.</div>
 									<div class="feedback-card__text">
-										<p>Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме. За этот период значительно увеличился словарный запас у ребёнка, может составлять предложения, отвечать на вопросы...</p>
+										<p>Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме. За этот период значительно увеличился словарный запас у ребёнка, может составлять предложения, отвечать на вопросы. Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме.</p>
 									</div>
 									<div class="feedback-card__bottom">
-										<a href="" class="feedback-card__link">читать полностью</a>
+										<div class="feedback-card__btn">
+											<span>читать полностью</span>
+											<span>Скрыть</span>
+										</div>
 									</div>
 								</div>
 								<div class="feedback-card">
@@ -953,10 +962,13 @@
 									</div>
 									<div class="feedback-card__title">Меня зовут Елена, сын Иван 8 лет. Мы занимаемся уже год.</div>
 									<div class="feedback-card__text">
-										<p>Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме. За этот период значительно увеличился словарный запас у ребёнка, может составлять предложения, отвечать на вопросы...</p>
+										<p>Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме. За этот период значительно увеличился словарный запас у ребёнка, может составлять предложения, отвечать на вопросы. Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме.</p>
 									</div>
 									<div class="feedback-card__bottom">
-										<a href="" class="feedback-card__link">читать полностью</a>
+										<div class="feedback-card__btn">
+											<span>читать полностью</span>
+											<span>Скрыть</span>
+										</div>
 									</div>
 								</div>
 								<div class="feedback-card">
@@ -973,10 +985,13 @@
 									</div>
 									<div class="feedback-card__title">Всем здравствуйте!</div>
 									<div class="feedback-card__text">
-										<p>Хотела бы поделиться нашим опытом занятий с Зейном. У моей дочки был такой период, когда мы приостановили интенсивные занятия английским языком и оставили только книжки и мультики. И через какой-то период времени она начала отказываться  общаться со мной на...</p>
+										<p>Хотела бы поделиться нашим опытом занятий с Зейном. У моей дочки был такой период, когда мы приостановили интенсивные занятия английским языком и оставили только книжки и мультики. И через какой-то период времени она начала отказываться общаться со мной на Хотела бы поделиться нашим опытом занятий с Зейном. У моей дочки был такой период, когда мы приостановили интенсивные занятия английским языком и оставили только книжки и мультики.</p>
 									</div>
 									<div class="feedback-card__bottom">
-										<a href="" class="feedback-card__link">читать полностью</a>
+										<div class="feedback-card__btn">
+											<span>читать полностью</span>
+											<span>Скрыть</span>
+										</div>
 										<a class="feedback-card__link2" href="">видеоотзыв</a>
 									</div>
 								</div>
@@ -994,10 +1009,13 @@
 									</div>
 									<div class="feedback-card__title">Меня зовут Елена, сын Иван 8 лет. Мы занимаемся уже год.</div>
 									<div class="feedback-card__text">
-										<p>Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме. За этот период значительно увеличился словарный запас у ребёнка, может составлять предложения, отвечать на вопросы...</p>
+										<p>Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме. За этот период значительно увеличился словарный запас у ребёнка, может составлять предложения, отвечать на вопросы. Замечательная школа. Разработали индивидуальную методику обучения. Все занятия проходят в доступной и игровой форме.</p>
 									</div>
 									<div class="feedback-card__bottom">
-										<a href="" class="feedback-card__link">читать полностью</a>
+										<div class="feedback-card__btn">
+											<span>читать полностью</span>
+											<span>Скрыть</span>
+										</div>
 									</div>
 								</div>
 							</div>
