--- a/gratitude.html
+++ b/gratitude.html
@@ -63,16 +63,24 @@
                     <span>contact@freeworldkids.com</span>
                 </a>
                 <div class="header__group">
-                    <a class="header__phone" href="tel:7(909)4333930">+7(909) 433-39-30</a>
-                    <button class="header__btn btn">
+                    <a class="header__phone" href="tel:7(909)4333930" >+7(909) 433-39-30</a>
+                    <a href="#popup-call" class="header__btn btn" data-fancybox="popup-call">
                         <span>Обратный звонок</span>
-                    </button>
+                    </a>
                 </div>
             </div>
-            <div class="burger">
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="header__mob">
+                <div class="header__group">
+                    <a class="header__phone" href="tel:7(909)4333930" >+7(909) 433-39-30</a>
+                    <a href="#popup-call" class="header__btn btn" data-fancybox="popup-call">
+                        <span>Обратный звонок</span>
+                    </a>
+                </div>
+                <div class="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </div>
     </div>
@@ -150,9 +158,9 @@
                 <div class="footer__wrap">
                     <div class="footer__group2">
                         <a class="footer__phone" href="tel:7(909)4333930">+7(909) 433-39-30</a>
-                        <button class="footer__btn btn">
+                        <a href="#popup-call" class="footer__btn btn" data-fancybox="popup-call">
                             <span>Обратный звонок</span>
-                        </button>
+                        </a>
                     </div>
                     <div class="footer__email-wrap">
                         <div class="footer__email-title">E-mail:</div>
