--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
                 </a>
                 <div class="header__group">
                     <a class="header__phone" href="tel:7(909)4333930" >+7(909) 433-39-30</a>
-                    <a href="#popup-call" class="header__btn btn" data-fancybox="popup-call">
+                    <a href="" class="header__btn btn" data-fancybox data-src="#popup-call">
                         <span>Обратный звонок</span>
                     </a>
                 </div>
